Sync code, config and build files for mc-1.16.5